--- a/test/basis/pages/index/index.wxml
+++ b/test/basis/pages/index/index.wxml
@@ -21,4 +21,10 @@
 <view>{{loopRequireData}}</view>
 
 <view class="spacing"></view>
+<!-- 测试模糊匹配组件  -->
+<tips content="this is tips component" />
+<!-- 测试详细匹配组件 -->
+<info content="this is info component" />
+
+<view class="spacing"></view>
 <navigator url="/pages/sub_a/index">跳转sub_a</navigator>
