--- a/test/basis/pages/index/index.wxss
+++ b/test/basis/pages/index/index.wxss
@@ -1,4 +1,4 @@
 /* 测试普通引入 */
 @import '../../components/common.wxss';
-/* 测试绝对路径引入 */
-@import '/components/absolute.wxss';
+/* 测试绝对路径引入（同时测试省略后缀） */
+@import '/components/absolute';
