--- a/test/basis/pages/sub_a/index.wxml
+++ b/test/basis/pages/sub_a/index.wxml
@@ -11,3 +11,15 @@
 <view>{{requireData2}}</view>
 <view>{{requireData3}}</view>
 <view>{{requireData4}}</view>
+
+<view class="spacing"></view>
+<component content="this is dir component" />
+<component2 content="this is ./dir component" />
+<component3 content="this is ../dir component" />
+<component4 content="this is /dir component" />
+
+<view class="spacing"></view>
+<view class="wxss_1">this id dir wxss</view>
+<view class="wxss_2">this id ./dir wxss</view>
+<view class="wxss_3">this id ../dir wxss</view>
+<view class="wxss_4">this id /dir wxss</view>
