test: 增加wxml文件的dir、./dir、../dir、/dir用例

--- a/test/basis/pages/index/index.wxml
+++ b/test/basis/pages/index/index.wxml
@@ -12,7 +12,7 @@
 <!-- 测试绝对路径import -->
 <import src="/components/template/import2.wxml" />
 <!-- 测试省略后缀import -->
-<import src="/components/template/import3.wxml" />
+<import src="/components/template/import3" />
 
 <view class="title">index页面</view>
 
