test: 增加wxs文件的dir、./dir、../dir用例

--- a/test/basis/pages/sub_a/common/wxs.wxs
+++ b/test/basis/pages/sub_a/common/wxs.wxs
@@ -1,4 +1,6 @@
 module.exports = {
     wxsData1: 'this is dir wxs',
     wxsData2: 'this is ./dir wxs',
+    requireData1: 'this is dir require wxs',
+    requireData2: 'this is ./dir require wxs',
 };
