--- a/test/basis/tools/wxs.wxs
+++ b/test/basis/tools/wxs.wxs
@@ -5,6 +5,7 @@ var wxs3 = require('./wxs3.wxs');
 
 module.exports = {
     data: 'this is wxs data, ' + wxs2.data + ', ' + wxs3,
+    anyData: require('./wxs2.wxs').anyData,
     wxsData3: 'this is ../dir wxs',
     requireData3: 'this is ../dir require wxs',
 };
